[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/InvSpot.tscn" type="PackedScene" id=2]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HSplitContainer" type="HBoxContainer" parent="."]
anchor_top = 0.811
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1

[node name="InvSpot" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 344.0
margin_top = 16.0
margin_right = 424.0
margin_bottom = 96.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InvSpot2" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 429.0
margin_top = 16.0
margin_right = 509.0
margin_bottom = 96.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InvSpot3" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 514.0
margin_top = 16.0
margin_right = 594.0
margin_bottom = 96.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InvSpot4" parent="HSplitContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 599.0
margin_top = 16.0
margin_right = 679.0
margin_bottom = 96.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4

